--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 include:
   - .well-known
+
+defaults:
+  - scope:
+      path: ".well-known/apple-app-site-association"
+    values:
+      content_type: "application/json"
